Update package.json and mysql.config.ts, add create-module and create-permission DTOs, create module and permission modules, add base-response DTO, update app.module.ts, add permission controller and service, add module entity, add permission controller and service tests, add message constant

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "admin_system",
   "version": "0.0.1",
   "description": "",
-  "author": "",
+  "author": "Mohammad Husain",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
