--- a/.env
+++ b/.env
@@ -4,6 +4,7 @@ PORT=4000
 SALT_ROUND=10
 
 SECRET=Admin@123
+URL='http://localhost:4000'
 
 # DB config
 DB_HOST=localhost
@@ -11,3 +12,10 @@ DB_PORT=3306
 DB_USER=root
 DB_PASSWORD=root
 DB_DATABASE=admin_panel_backend
+
+# email
+SENDER_EMAIL=varaliyamahammadhusain@gmail.com
+EMAIL_PORT=465
+EMAIL_HOST=smtp.gmail.com
+EMAIL_USER=varaliyamahammadhusain@gmail.com
+EMAIL_PASS=bomw qvsy glth ohtp
